Changed artifactory base